// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icons RenderIcon renders correctly 1`] = `
<span
  className="review"
>
  <FontAwesome
    name="undefined-o"
    onClick={[Function]}
    size="lg"
    tag="i"
  />
  <p
    className="text-capitalize d-none d-xs-none d-sm-none d-md-block"
  >
    review
  </p>
</span>
`;

exports[`Icons RenderIcon renders correctly review icon when reviewed 1`] = `
<span
  className="review"
>
  <FontAwesome
    name="star"
    size="lg"
    tag="i"
  />
  <p
    className="text-capitalize d-none d-xs-none d-sm-none d-md-block"
  >
    Reviewed
  </p>
</span>
`;

exports[`Icons RenderVoteIcon renders correctly 1`] = `
<span
  className="upvote"
>
  <FontAwesome
    name="thumbs-o-up"
    onClick={[Function]}
    size="lg"
    tag="i"
  />
  <p
    className="text-capitalize d-none d-xs-none d-sm-none d-md-block"
  >
    upvote
  </p>
</span>
`;
